Tue Jun 25 15:24:13 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Revise evaluation behavior of
	  for-statement's explicit controlling-expression in order to properly
	  evaluate the branch entering condition.
	  Revise evaluation behavior of conditional-expressions to adopt the
	  non-NULL pointer as the expression value when a value of the
	  controlling-expression is indefinite.

	* lib/adlint/cc1/mediator.rb : Revise pointer dereferencing behavior to
	  successfully dereference a pointer only when the value of pointer
	  variable is definite again.

	* features/code_check/W0610.feature : Add scenario to reproduce bad
	  variables' value-domain management problem.

Mon Jun 24 17:22:47 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/branch.rb : Fix over-thinning of controlling
	  variable's value-domain when the terminating branch is of
	  switch-statement enclosed by an iteration-statement.

	* features/code_check/W0459.feature : Add scenario to reproduce
	  false-positive of W0459 code check caused by bad break statement
	  evaluation in thinning value-domain of the controlling variable.

Mon Jun 24 16:51:36 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Restore scrapped side-effect rollback of
	  inner-variables.

Fri Jun 21 19:14:39 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix incomplete assignment to the array
	  representative element.

	* features/code_check/W0459.feature : Add scenario to reproduce
	  false-positive of W0459 code check caused by missing representative
	  element updating.

Fri Jun 21 17:59:24 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Add assignment to the array representative
	  element.

	* features/code_check/W0459.feature : Add scenario to reproduce
	  false-negative of W0459 code check caused by missing representative
	  element updating.
