@@ -62,3 +62,54 @@ Feature: W0461
       | W0950 | 1    | 23     |
       | W0628 | 5    | 13     |
       | W0628 | 10   | 13     |
+
+  Scenario: array elements may be initialized according to a parameter value
+    Given a target source named "fixture.c" with:
+      """
+      extern void bar(const int *);
+
+      void baz(int i)
+      {
+          int a[5];
+
+          for (; i < 2; i++) {
+              a[i] = i;
+          }
+
+          bar(a); /* OK not W0461 but W0462 */
+      }
+      """
+    When I successfully run `adlint fixture.c` on noarch
+    Then the output should exactly match with:
+      | mesg  | line | column |
+      | W0118 | 1    | 13     |
+      | W0117 | 3    | 6      |
+      | W0534 | 7    | 10     |
+      | W0705 | 8    | 11     |
+      | W0462 | 11   | 9      |
+      | W0950 | 5    | 11     |
+      | W0628 | 3    | 6      |
+
+  Scenario: array elements is initialized by an iteration-statement
+    Given a target source named "fixture.c" with:
+      """
+      extern void bar(const int *);
+
+      void baz(void)
+      {
+          int a[3];
+
+          for (int i = 0; i < 3; i++) {
+              a[i] = i;
+          }
+
+          bar(a); /* OK */
+      }
+      """
+    When I successfully run `adlint fixture.c` on noarch
+    Then the output should exactly match with:
+      | mesg  | line | column |
+      | W0118 | 1    | 13     |
+      | W0117 | 3    | 6      |
+      | W0950 | 5    | 11     |
+      | W0628 | 3    | 6      |
